[package]
name = "cheatqol"
version = "0.1.0"
authors = ["BadAtGames26"]
edition = "2021"

[package.metadata.skyline]
titleid = "0100a6301214e000" # Fire Emblem Engage

[lib]
crate-type = ["cdylib"]

[dependencies]
cobapi = { git = "https://github.com/DivineDragonFanClub/cobapi.git", version = "0.3.0" }
engage = { git = "https://github.com/DivineDragonFanClub/engage.git", version = "0.5.0" }
serde = { version = "1.0.197", features = ["derive"]}
skyline = "0.2.0"
toml = "0.8.10"
unity = { git = "https://github.com/DivineDragonFanClub/unity.git", version = "0.2.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
